# Tinkoff-python-backend-academy

./: README.md
2023-09-12-introductory-seminar-redfox193/: Makefile  README.md  main.py  pyproject.toml  requirements.md  setup.cfg
2023-09-12-introductory-seminar-redfox193/.github/workflows/: app.yml
2023-09-12-introductory-seminar-redfox193/src/hangman/: hangman.py  words.txt
2023-09-12-introductory-seminar-redfox193/tests/: test_hangman.py
2023-09-19-tools-part-2-redfox193/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
2023-09-19-tools-part-2-redfox193/.github/workflows/: app.yml
2023-09-19-tools-part-2-redfox193/api/: Insomnia_2023-09-19.json
2023-09-19-tools-part-2-redfox193/assets/materials/: api.md  assembly_systems.md  docker.md  homework.md  ide.md
2023-09-19-tools-part-2-redfox193/docker/: Dockerfile.python3.12
2023-09-19-tools-part-2-redfox193/src/hangman/: hangman.py
2023-09-19-tools-part-2-redfox193/tests/: test_hangman.py
2023-09-26-design-principles-redfox193/: README.md  main.py  pyproject.toml
2023-09-26-design-principles-redfox193/examples/: dry_after.py  dry_before.py  dsp_after.py  dsp_before.py  intro.md  isp_after.py  isp_before.py  kiss_after.py  kiss_before.py  lsp_after.py  lsp_before.py  ocp_after.py  ocp_before.py  srp_after.py  srp_before.py  yagni_after.py  yagni_before.py
2023-09-26-design-principles-redfox193/hw/: after.py  before.py  homework.md
2023-09-26-design-principles-redfox193/hw/after/: hangman.py
2023-09-26-design-principles-redfox193/hw/before/: hangman.py
2023-09-26-design-principles-redfox193/tests/: test_courses_management.py
2023-autumn-ab-python-cicd-hw6-redfox193/: Makefile  README.md  docker-compose.yml  pyproject.toml
2023-autumn-ab-python-cicd-hw6-redfox193/.github/workflows/: ci.yml  deploy.yml
2023-autumn-ab-python-cicd-hw6-redfox193/docker/server/: Dockerfile
2023-autumn-ab-python-cicd-hw6-redfox193/docker/tests/: Dockerfile
2023-autumn-ab-python-cicd-hw6-redfox193/materials/: hw.md
2023-autumn-ab-python-cicd-hw6-redfox193/server/: main.py  modules.py
2023-autumn-ab-python-cicd-hw6-redfox193/tests/: test_main.py  test_modules.py
2023-autumn-ab-python-hw-10-db-redfox193/: .gitignore  README.md  pyproject.toml
2023-autumn-ab-python-hw-10-db-redfox193/assets/materials/: conclusions.md  cursor.md  homework.md  orm.md  overview.md  pg_docker.md  pydb.md  schema.md
2023-autumn-ab-python-hw-10-db-redfox193/docker/: .env_template  docker-compose.yml
2023-autumn-ab-python-hw-10-db-redfox193/src/: cursor.py  peewee_orm.py  py_db.py
2023-autumn-ab-python-hw-10-db-redfox193/src/homework/: main.py
2023-autumn-ab-python-hw-14-team-dev-OlgaShish/: Makefile  README.md  Tutorial.md  config.json  docker-compose.yml  pyproject.toml
2023-autumn-ab-python-hw-14-team-dev-OlgaShish/.github/workflows/: app.yml
2023-autumn-ab-python-hw-14-team-dev-OlgaShish/assets/materials/: template.md
2023-autumn-ab-python-hw-14-team-dev-OlgaShish/docker/server/: Dockerfile
2023-autumn-ab-python-hw-14-team-dev-OlgaShish/src/homework/: db_mock_methods.py  main.py  models.py  tkn.py  tps.py
2023-autumn-ab-python-hw-14-team-dev-OlgaShish/src/homework/db/: database.py  tables.py
2023-autumn-ab-python-hw-14-team-dev-OlgaShish/tests/: test_app.py
2023-autumn-ab-python-hw-5-restful-api-redfox193/: .gitignore  README.md  pyproject.toml  requirements.txt
2023-autumn-ab-python-hw-5-restful-api-redfox193/.github/workflows/: app.yml
2023-autumn-ab-python-hw-5-restful-api-redfox193/assets/materials/: conclusions.md  env.md  homework.md  manage_urls.md  overview.md  tidy_up_code.md  url_shortener.md
2023-autumn-ab-python-hw-5-restful-api-redfox193/docker/: Dockerfile
2023-autumn-ab-python-hw-5-restful-api-redfox193/homework_app/: main.py  modules.py
2023-autumn-ab-python-hw-5-restful-api-redfox193/tests/: test_main.py  test_modules.py
2023-autumn-ab-python-hw-8-tdd-redfox193/: README.md
2023-autumn-ab-python-hw-8-tdd-redfox193/.github/workflows/: app.yml
2023-autumn-ab-python-hw-8-tdd-redfox193/assets/materials/: conclusions.md  hash_table.md  hash_understanding.md  homework.md  overview.md
2023-autumn-ab-python-hw-8-tdd-redfox193/docker/: Dockerfile
2023-autumn-ab-python-hw-8-tdd-redfox193/src/: main.py
2023-autumn-ab-python-hw-8-tdd-redfox193/tests/: test_main.py
2023-autumn-ab-python-patterns-hw12-redfox193/: .env.example  .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  log.txt  pyproject.toml
2023-autumn-ab-python-patterns-hw12-redfox193/.github/workflows/: ci.yml
2023-autumn-ab-python-patterns-hw12-redfox193/config/: .env.app  settings.py
2023-autumn-ab-python-patterns-hw12-redfox193/docker/reserve_weather_server/: Dockerfile
2023-autumn-ab-python-patterns-hw12-redfox193/docker/server/: Dockerfile
2023-autumn-ab-python-patterns-hw12-redfox193/docker/tests/: Dockerfile
2023-autumn-ab-python-patterns-hw12-redfox193/docker/weather_server/: Dockerfile
2023-autumn-ab-python-patterns-hw12-redfox193/files/: children.yml  list.xml
2023-autumn-ab-python-patterns-hw12-redfox193/files/subdirectory/: report_2029.03.11.json
2023-autumn-ab-python-patterns-hw12-redfox193/materials/: hw.md
2023-autumn-ab-python-patterns-hw12-redfox193/reserve_weather_server/: app.py  asgi.py  contracts.py
2023-autumn-ab-python-patterns-hw12-redfox193/reserve_weather_server/api/: forecast.py
2023-autumn-ab-python-patterns-hw12-redfox193/server/: app.py  asgi.py  contracts.py
2023-autumn-ab-python-patterns-hw12-redfox193/server/api/: parents.py  weather.py
2023-autumn-ab-python-patterns-hw12-redfox193/tests/: test_app.py
2023-autumn-ab-python-patterns-hw12-redfox193/weather_server/: app.py  asgi.py  contracts.py
2023-autumn-ab-python-patterns-hw12-redfox193/weather_server/api/: forecast.py
