[build-system]
requires = ["setuptools>=68.1"]
build-backend = "setuptools.build_meta"

[project]
name = "homework_10"
version = "0.0.1"
authors = [
  { name="Dmitry Kosarevsky", email="if@kosarevsky.ru" },
]
description = "A Tinkoff Python AB hw-10 package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/central-university-dev/python-hw-10-template"
"Bug Tracker" = "https://github.com/central-university-dev/python-hw-10-template/issues"
