[build-system]
requires = ["setuptools>=68.1"]
build-backend = "setuptools.build_meta"

[project]
name = "homework_5"
version = "0.0.1"
authors = [
  { name="Dmitry Kosarevsky", email="if@kosarevsky.ru" },
]
description = "A Tinkoff Python AB hw-5 package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/central-university-dev/python-hw-5-template"
"Bug Tracker" = "https://github.com/central-university-dev/python-hw-5-template/issues"
